--- a/recepten.html
+++ b/recepten.html
@@ -10,7 +10,7 @@ title: Recepten
 	<div class="row">
 		{% for recept in site.recepten %}
 			<div style="background-image: url({{ recept.image_path }})" class="col-lg-3 col-sm-4 receptCard">
-				<h2><a href="recepten.{{ recept.url }}">{{ recept.title }}</a></h2>
+				<h2><a href="{{site.baseurl}}.recepten.{{ recept.url }}">{{ recept.title }}</a></h2>
 				<div onclick="" class="receptIntro">
 					{{ recept.content | truncate: 200 }}
 				</div>
