--- a/index.html
+++ b/index.html
@@ -1,22 +1,15 @@
 ---
+layout: default
+title: Home
 ---
 
 <!DOCTYPE html>
 <html>
-  {% include general/head.html %}
-<body>
-  {% include general/top-navigation.html %}
-  {% include pages/home/header.html %}
-  {% include pages/home/navigation.html %}
-  {% include pages/home/cards.html %}
-  {% include pages/home/news.html %}
-
-
-
-
-  {% include general/footer.html %}
-  {% include general/copyright.html %}
-  <!-- Js pullins at bottom of body -->
-  {% include general/js-pullins.html %}
-</body>
+  <body>
+    {% include general/top-navigation.html %}
+    {% include pages/home/header.html %}
+    {% include pages/home/navigation.html %}
+    {% include pages/home/cards.html %}
+    {% include pages/home/news.html %}
+  </body>
 </html>
