--- a/recepten.html
+++ b/recepten.html
@@ -7,6 +7,12 @@ title: Recepten
 		<h2>Heerlijke recepten voor een gezonde trek</h2>
 	</div>
 
+	<div class="receptenNav">
+		{% for recept in site.recepten %}
+			<a href="{{site.baseurl}}{{recept.url}}">{{recept.title}}</a>
+		{% endfor %}
+	</div>
+
 	<div class="row">
 		{% for recept in site.recepten %}
 			<div style="background-image: url({{site.baseurl}}/img/recepten/{{recept.imageName}})" class="col-lg-3 col-sm-6 receptCard">
