random recept on Home

--- a/recepten.html
+++ b/recepten.html
@@ -9,16 +9,18 @@ title: Recepten
 
 	<div class="receptenNav">
 		{% for recept in site.recepten %}
-			<a href="{{site.baseurl}}{{recept.url}}">{{recept.title}}</a>
+			<a href="{{site.baseurl}}{{recept.url}}">{{ recept.title }}</a>
 		{% endfor %}
 	</div>
 
 	<div class="row">
 		{% for recept in site.recepten %}
 			<div style="background-image: url({{site.baseurl}}/img/recepten/{{recept.imageName}})" class="col-lg-3 col-sm-6 receptCard">
-				<h2><a href="{{site.baseurl}}{{recept.url}}">{{recept.title}}</a></h2>
+				<h2><a href="{{site.baseurl}}{{recept.url}}">{{ recept.title }}</a></h2>
 				<div onclick="" class="receptIntro">
-					{{ recept.content | truncate: 200 }}
+					<strong><p>{{ recept.intro }}</p></strong>
+					{{ recept.content | truncate: 250 }}
+					<a href="{{site.baseurl}}{{recept.url}}">lees meer</a>
 				</div>
 			</div>
 		{% endfor %}
