--- a/recepten.html
+++ b/recepten.html
@@ -1,6 +1,6 @@
 ---
 layout: default
-title: Recepten
+title: recepten
 ---
 <div class="container">
 	<div class="jumbotron" style="background-image: url({{site.baseurl}}/img/backgrounds/bloei-en-leef-recepten-background-img.jpg)">
@@ -64,7 +64,7 @@ title: Recepten
 					</div>
 					<div class="receptIntro">
 						<strong><p>{{ recept.intro }}</p></strong>
-						{{ recept.content | truncate: 80 }}
+						{{ recept.content | truncate: 90 }}
 						<a href="{{site.baseurl}}{{recept.url}}">lees meer</a>
 					</div>
 				</div>
