--- a/weetjes.html
+++ b/weetjes.html
@@ -1,10 +1,13 @@
 ---
 layout: default
-title: Recepten
+title: weetjes
 ---
 <div class="container">
 	<div class="jumbotron" style="background-image: url({{site.baseurl}}/img/backgrounds/bloei-en-leef-weetjes-background-img.jpg)">
 		<h2>Laat je verrassen met leuke weetjes</h2>
+	</div>
+	<div class="receptenInfo">
+		<p id="searchIcon" onclick=""><i class="fa fa-search" aria-hidden="true"></i></p>
 	</div>
 	<div class="receptenNav height0">
 		{% for weetje in site.weetjes %}
@@ -16,12 +19,9 @@ title: Recepten
 			<div style="background-image: url({{site.baseurl}}/img/weetjes/{{weetje.imageName}})" class="col-lg-3 col-sm-6 receptCard">
 				<h2><a href="{{site.baseurl}}{{weetje.url}}">{{ weetje.title }}</a></h2>
 				<div onclick="" class="receptInfoCard">
-					<div class="receptInfo">
-						<strong><p>{{ weetje.intro }}</p></strong>
-					</div>
 					<div class="receptIntro">
 						<strong><p>{{ weetje.intro }}</p></strong>
-						{{ weetje.content | truncate: 80 }}
+						{{ weetje.content | truncate: 90 }}
 						<a href="{{site.baseurl}}{{weetje.url}}">lees meer</a>
 					</div>
 				</div>
