--- a/blogs.html
+++ b/blogs.html
@@ -2,30 +2,32 @@
 layout: default
 title: blogs
 ---
-<div class="container">
-	<div class="jumbotron" style="background-image: url({{site.baseurl}}/img/backgrounds/bloei-en-leef-blogs-background-img.jpg)">
-		<h2>Succesverhalen van gewone mensen</h2>
-	</div>
-	<div class="receptenInfo">
-		<p id="searchIcon" onclick=""><i class="fa fa-search" aria-hidden="true"></i></p>
-	</div>
-	<div class="receptenNav height0">
-		{% for blog in site.blogs %}
-			<a href="{{site.baseurl}}{{blog.url}}">{{ blog.title }}</a>
-		{% endfor %}
-	</div>
-	<div class="row">
-		{% for blog in site.blogs %}
-			<div style="background-image: url({{ site.baseurl}}/img/blogs/{{blog.imageName }})" class="col-lg-6 col-sm-6 receptCard">
-				<h2><a href="{{ site.baseurl }}{{ blog.url }}">{{ blog.title }}</a></h2>
-				<div onclick="" class="receptInfoCard">
-					<div class="receptIntro">
-						<strong><p>{{ blog.intro }}</p></strong>
-						{{ blog.content | truncate: 400 }}
-						<a href="{{site.baseurl}}{{blog.url}}">lees meer</a>
+<section id="blogsSection">
+	<div class="container">
+		<div class="titleElement" style="background-image: url({{site.baseurl}}/img/backgrounds/bloei-en-leef-blogs-background-img.jpg)">
+			<h2>Succesverhalen van gewone mensen</h2>
+		</div>
+		<div class="receptenInfo">
+			<p id="searchIcon" onclick=""><i class="fa fa-search" aria-hidden="true"></i></p>
+		</div>
+		<div class="contentNav height0">
+			{% for blog in site.blogs %}
+				<a href="{{site.baseurl}}{{blog.url}}">{{ blog.title }}</a>
+			{% endfor %}
+		</div>
+		<div class="row">
+			{% for blog in site.blogs %}
+				<div style="background-image: url({{ site.baseurl}}/img/blogs/{{blog.imageName }})" class="col-lg-6 col-sm-6 receptCard">
+					<h2><a href="{{ site.baseurl }}{{ blog.url }}">{{ blog.title }}</a></h2>
+					<div onclick="" class="receptInfoCard">
+						<div class="receptIntro">
+							<strong><p>{{ blog.intro }}</p></strong>
+							{{ blog.content | truncate: 400 }}
+							<a href="{{site.baseurl}}{{blog.url}}">lees meer</a>
+						</div>
 					</div>
 				</div>
-			</div>
-		{% endfor %}
+			{% endfor %}
+		</div>
 	</div>
-</div>
+</section>
