--- a/weetjes.html
+++ b/weetjes.html
@@ -2,30 +2,34 @@
 layout: default
 title: weetjes
 ---
-<div class="container">
-	<div class="jumbotron" style="background-image: url({{site.baseurl}}/img/backgrounds/bloei-en-leef-weetjes-background-img.jpg)">
-		<h2>Laat je verrassen met leuke weetjes</h2>
-	</div>
-	<div class="receptenInfo">
-		<p id="searchIcon" onclick=""><i class="fa fa-search" aria-hidden="true"></i></p>
-	</div>
-	<div class="receptenNav height0">
-		{% for weetje in site.weetjes %}
-			<a href="{{site.baseurl}}{{weetje.url}}">{{ weetje.title }}</a>
-		{% endfor %}
-	</div>
-	<div class="row">
-		{% for weetje in site.weetjes %}
-			<div style="background-image: url({{site.baseurl}}/img/weetjes/{{weetje.imageName}})" class="col-lg-3 col-sm-6 receptCard">
-				<h2><a href="{{site.baseurl}}{{weetje.url}}">{{ weetje.title }}</a></h2>
-				<div onclick="" class="receptInfoCard">
-					<div class="receptIntro">
-						<strong><p>{{ weetje.intro }}</p></strong>
-						{{ weetje.content | truncate: 90 }}
-						<a href="{{site.baseurl}}{{weetje.url}}">lees meer</a>
+<section id="weetjesSection">
+	<div class="container">
+		<div class="titleElement" style="background-image: url({{site.baseurl}}/img/backgrounds/bloei-en-leef-weetjes-background-img.jpg)">
+			<h2>Laat je verrassen met leuke weetjes</h2>
+		</div>
+		<div class="receptenInfo">
+			<p id="searchIcon" onclick=""><i class="fa fa-search" aria-hidden="true"></i></p>
+		</div>
+		<div class="contentNav height0">
+			{% for weetje in site.weetjes %}
+				<a href="{{site.baseurl}}{{weetje.url}}">{{ weetje.title }}</a>
+			{% endfor %}
+		</div>
+		<div class="row">
+			{% for weetje in site.weetjes %}
+				<div class="col-lg-3 col-sm-6">
+					<div style="background-image: url({{site.baseurl}}/img/weetjes/{{weetje.imageName}})" class="gridSpace receptCard">
+						<h2><a href="{{site.baseurl}}{{weetje.url}}">{{ weetje.title }}</a></h2>
+						<div onclick="" class="receptInfoCard">
+							<div class="receptIntro">
+								<strong><p>{{ weetje.intro }}</p></strong>
+								{{ weetje.content | truncate: 90 }}
+								<a href="{{site.baseurl}}{{weetje.url}}">lees meer</a>
+							</div>
+						</div>
 					</div>
 				</div>
-			</div>
-		{% endfor %}
+			{% endfor %}
+		</div>
 	</div>
-</div>
+</section>
