--- a/index.html
+++ b/index.html
@@ -8,7 +8,8 @@ title: Home
   <body>
     {% include pages/home/header.html %}
     {% include pages/home/navigation.html %}
-    {% include pages/home/cards.html %}
     {% include pages/home/news.html %}
+    {% include pages/home/flower.html %}
+    {% include pages/home/cards.html %}
   </body>
 </html>
