--- a/search.html
+++ b/search.html
@@ -1,17 +1,12 @@
 ---
-layout: default
+layout: generalPage
+imageName: bloei-en-leef-header-img-3.jpg
 title: Zoek resultaten
 tipue_search_active: true
 exclude_from_search: true
 ---
 <section id="searchSection">
   <div class="container">
-    <div style="background-image: url({{site.baseurl}}/img/backgrounds/bloei-en-leef-header-img-3.jpg)" class="pageTitleElement">
-      <h1><i class="fa fa-search" aria-hidden="true"></i><i class="fa fa-search" aria-hidden="true"></i><i class="fa fa-search" aria-hidden="true"></i></h1>
-    </div>
-    <div class="contentTitleInfo">
-      <!-- <a id="backToPrevious" href="{{ site.baseurl }}/index"><i class="fa fa-undo" aria-hidden="true"></i> Mizzi</a> -->
-    </div>
     {% include general/searchForm.html %}
     <div id="tipue_search_content"></div>
   </div>
