ad to homescreen call

--- a/index.html
+++ b/index.html
@@ -12,5 +12,8 @@ exclude_from_search: true
     {% include pages/home/news.html %}
     {% include pages/home/flower.html %}
     {% include pages/home/cards.html %}
+    <script>
+      addToHomescreen();
+    </script>
   </body>
 </html>
