--- a/weetjes.html
+++ b/weetjes.html
@@ -8,7 +8,7 @@ title: weetjes
 			<h2>Laat je verrassen met leuke weetjes</h2>
 		</div>
 		<div class="receptenInfo">
-			<p id="searchIcon" onclick=""><i class="fa fa-search" aria-hidden="true"></i></p>
+			<p class="searchIcon" onclick=""><i class="fa fa-search" aria-hidden="true"></i></p>
 		</div>
 		<div class="contentNav height0">
 			{% for weetje in site.weetjes %}
