--- a/recepten.html
+++ b/recepten.html
@@ -16,7 +16,7 @@ exclude_from_search: true
 				<p id="hormoon" class="suffice">zuivelvrij <span class="icon-noMilk"></span></p>
 				<p id="hormoon" class="suffice">suikervrij <span class="icon-noSugar"></span></p>
 			</div>
-			<p id="searchIcon" onclick=""><i class="fa fa-search" aria-hidden="true"></i></p>
+			<p class="searchIcon" onclick=""><i class="fa fa-search" aria-hidden="true"></i></p>
 		</div>
 		<div class="contentNav height0">
 			{% include general/searchForm.html %}
